src/test/compile-fail/reserved-m32.rs
// error-pattern:reserved keyword

fn main() {
  let int m32 = 0;
}
